--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Privacy Policy - The Brief: Daily</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      line-height: 1.6;
+      color: #333;
+    }
+    h1, h2 {
+      color: #1a1a1a;
+    }
+  </style>
+</head>
+<body>
+  <h1>Privacy Policy for The Brief: Daily</h1>
+  <p><strong>Effective Date:</strong> October 20, 2025</p>
 
+  <p>The Brief: Daily ("we", "our", "us") provides users with the latest news, weather, and finance information. We value your privacy and are committed to protecting it.</p>
+
+  <h2>1. Information We Collect</h2>
+  <p>We do not collect, store, or share any personal information from users. The app only requests permission to send notifications.</p>
+
+  <h2>2. Third-Party Services</h2>
+  <p>We use Google AdMob to display advertisements. AdMob may collect certain data as described in Google’s Privacy Policy:</p>
+  <p><a href="https://policies.google.com/privacy" target="_blank">https://policies.google.com/privacy</a></p>
+
+  <h2>3. Notifications</h2>
+  <p>The app may request permission to send notifications. You can disable notifications at any time in your device settings.</p>
+
+  <h2>4. Children’s Privacy</h2>
+  <p>The Brief: Daily is suitable for general audiences and does not knowingly collect data from children under 13 years old.</p>
+
+  <h2>5. Changes to This Policy</h2>
+  <p>We may update this Privacy Policy periodically. Any changes will be posted within the app or on this page.</p>
+
+  <h2>6. Contact Us</h2>
+  <p>If you have any questions about this Privacy Policy, please contact us at:</p>
+  <p><strong>Email:</strong> your@email.com</p>
+</body>
+</html>
