--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,42 +5,93 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy - The Brief: Daily</title>
   <style>
+    
     body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: 40px auto;
-      line-height: 1.6;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f7f8;
       color: #333;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
     }
-    h1, h2 {
-      color: #1a1a1a;
+    
+    .container {
+      max-width: 900px;
+      margin: 50px auto;
+      background: #fff;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      color: #0d6efd;
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    h2 {
+      color: #0a58ca;
+      margin-top: 30px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #e0e0e0;
+      padding-bottom: 5px;
+    }
+
+    p {
+      margin-bottom: 15px;
+    }
+
+    a {
+      color: #0d6efd;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      .container {
+        padding: 20px;
+        margin: 20px;
+      }
+      h1 {
+        font-size: 24px;
+      }
+      h2 {
+        font-size: 18px;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Privacy Policy for The Brief: Daily</h1>
-  <p><strong>Effective Date:</strong> October 20, 2025</p>
+  <div class="container">
+    <h1>Privacy Policy for The Brief: Daily</h1>
+    <p><strong>Effective Date:</strong> October 20, 2025</p>
 
-  <p>The Brief: Daily ("we", "our", "us") provides users with the latest news, weather, and finance information. We value your privacy and are committed to protecting it.</p>
+    <p>The Brief: Daily ("we", "our", "us") provides users with the latest news, weather, and finance information. We value your privacy and are committed to protecting it.</p>
 
-  <h2>1. Information We Collect</h2>
-  <p>We do not collect, store, or share any personal information from users. The app only requests permission to send notifications.</p>
+    <h2>1. Information We Collect</h2>
+    <p>We do not collect, store, or share any personal information from users. The app only requests permission to send notifications.</p>
 
-  <h2>2. Third-Party Services</h2>
-  <p>We use Google AdMob to display advertisements. AdMob may collect certain data as described in Google’s Privacy Policy:</p>
-  <p><a href="https://policies.google.com/privacy" target="_blank">https://policies.google.com/privacy</a></p>
+    <h2>2. Third-Party Services</h2>
+    <p>We use Google AdMob to display advertisements. AdMob may collect certain data as described in Google’s Privacy Policy:</p>
+    <p><a href="https://policies.google.com/privacy" target="_blank">https://policies.google.com/privacy</a></p>
 
-  <h2>3. Notifications</h2>
-  <p>The app may request permission to send notifications. You can disable notifications at any time in your device settings.</p>
+    <h2>3. Notifications</h2>
+    <p>The app may request permission to send notifications. You can disable notifications at any time in your device settings.</p>
 
-  <h2>4. Children’s Privacy</h2>
-  <p>The Brief: Daily is suitable for general audiences and does not knowingly collect data from children under 13 years old.</p>
+    <h2>4. Children’s Privacy</h2>
+    <p>The Brief: Daily is suitable for general audiences and does not knowingly collect data from children under 13 years old.</p>
 
-  <h2>5. Changes to This Policy</h2>
-  <p>We may update this Privacy Policy periodically. Any changes will be posted within the app or on this page.</p>
+    <h2>5. Changes to This Policy</h2>
+    <p>We may update this Privacy Policy periodically. Any changes will be posted within the app or on this page.</p>
 
-  <h2>6. Contact Us</h2>
-  <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-  <p><strong>Email:</strong> your@email.com</p>
+    <h2>6. Contact Us</h2>
+    <p>If you have any questions about this Privacy Policy, please contact us at:</p>
+    <p><strong>Email:</strong> gundogannsami@email.com</p>
+  </div>
 </body>
 </html>
