--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -5,45 +5,95 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Terms of Use - The Brief: Daily</title>
   <style>
+    
     body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: 40px auto;
-      line-height: 1.6;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f7f8;
       color: #333;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
     }
-    h1, h2 {
-      color: #1a1a1a;
+    
+    .container {
+      max-width: 900px;
+      margin: 50px auto;
+      background: #fff;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      color: #0d6efd;
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    h2 {
+      color: #0a58ca;
+      margin-top: 30px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #e0e0e0;
+      padding-bottom: 5px;
+    }
+
+    p {
+      margin-bottom: 15px;
+    }
+
+    a {
+      color: #0d6efd;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    /* Responsive */
+    @media (max-width: 600px) {
+      .container {
+        padding: 20px;
+        margin: 20px;
+      }
+      h1 {
+        font-size: 24px;
+      }
+      h2 {
+        font-size: 18px;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Terms of Use for The Brief: Daily</h1>
-  <p><strong>Effective Date:</strong> October 20, 2025</p>
+  <div class="container">
+    <h1>Terms of Use for The Brief: Daily</h1>
+    <p><strong>Effective Date:</strong> October 20, 2025</p>
 
-  <p>By downloading or using The Brief: Daily, you agree to be bound by these Terms of Use.</p>
+    <p>By downloading or using The Brief: Daily, you agree to be bound by these Terms of Use.</p>
 
-  <h2>1. Service Description</h2>
-  <p>The Brief: Daily provides users with access to news, weather updates, and financial information. The app is provided “as is,” without any warranties regarding accuracy or availability.</p>
+    <h2>1. Service Description</h2>
+    <p>The Brief: Daily provides users with access to news, weather updates, and financial information. The app is provided “as is,” without any warranties regarding accuracy or availability.</p>
 
-  <h2>2. User Responsibilities</h2>
-  <p>You agree not to misuse the app or interfere with its normal operation. You must comply with all applicable laws while using the app.</p>
+    <h2>2. User Responsibilities</h2>
+    <p>You agree not to misuse the app or interfere with its normal operation. You must comply with all applicable laws while using the app.</p>
 
-  <h2>3. Intellectual Property</h2>
-  <p>All content and materials in The Brief: Daily are owned by us or our content providers and are protected by copyright laws.</p>
+    <h2>3. Intellectual Property</h2>
+    <p>All content and materials in The Brief: Daily are owned by us or our content providers and are protected by copyright laws.</p>
 
-  <h2>4. Third-Party Services</h2>
-  <p>The app uses Google AdMob to display advertisements. By using the app, you also agree to AdMob’s privacy and service terms.</p>
+    <h2>4. Third-Party Services</h2>
+    <p>The app uses Google AdMob to display advertisements. By using the app, you also agree to AdMob’s privacy and service terms.</p>
 
-  <h2>5. Limitation of Liability</h2>
-  <p>We are not responsible for any damages arising from the use or inability to use the app.</p>
+    <h2>5. Limitation of Liability</h2>
+    <p>We are not responsible for any damages arising from the use or inability to use the app.</p>
 
-  <h2>6. Changes to These Terms</h2>
-  <p>We may update these Terms of Use from time to time. Updated terms will be posted within the app or on this page.</p>
+    <h2>6. Changes to These Terms</h2>
+    <p>We may update these Terms of Use from time to time. Updated terms will be posted within the app or on this page.</p>
 
-  <h2>7. Contact Us</h2>
-  <p>If you have any questions regarding these Terms, please contact us at:</p>
-  <p><strong>Email:</strong> your@email.com</p>
+    <h2>7. Contact Us</h2>
+    <p>If you have any questions regarding these Terms, please contact us at:</p>
+    <p><strong>Email:</strong> gundogannsami@email.com</p>
+  </div>
 </body>
 </html>
-
