--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy - The Brief: Daily</title>
+  <h1>Terms of Use<br>The Brief: Daily</h1>
   <style>
     
     body {
