--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Terms of Use - The Brief: Daily</title>
+ <h1>Terms of Use<br>The Brief: Daily</h1>
   <style>
     
     body {
