--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -90,7 +90,7 @@
 
     <h2>6. Contact Us</h2>
     <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-    <p><strong>Email:</strong> gundogannsami@email.com</p>
+    <p><strong>Email:</strong> gundogannsami@gmail.com</p>
   </div>
 </body>
 </html>
