--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -92,7 +92,7 @@
 
     <h2>7. Contact Us</h2>
     <p>If you have any questions regarding these Terms, please contact us at:</p>
-    <p><strong>Email:</strong> gundogannsami@email.com</p>
+    <p><strong>Email:</strong> gundogannsami@gmail.com</p>
   </div>
 </body>
 </html>
