--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -89,6 +89,10 @@
     <p>We may update this Privacy Policy periodically. Any changes will be posted within the app or on this page.</p>
 
     <h2>6. Contact Us</h2>
+    
+    <h2>7. Third-Party Data Sources</h2>
+    <p>The app retrieves news, weather, and financial data from third-party APIs solely to display information in the app’s native interface. These data do not include personal user information and are not shared with any other service.</p>
+    
     <p>If you have any questions about this Privacy Policy, please contact us at:</p>
     <p><strong>Email:</strong> gundogannsami@gmail.com</p>
   </div>
