--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,7 +6,7 @@
   <title>Privacy Policy - The Brief: Daily</title>
   <style>
     :root {
-      --primary-color: #2563eb; /* Modern Mavi */
+      --primary-color: #2563eb;
       --text-color: #334155;
       --heading-color: #1e293b;
       --bg-color: #f1f5f9;
@@ -124,7 +124,7 @@
   <div class="container">
     <header>
       <h1>Privacy Policy for <span class="app-name">The Brief: Daily</span></h1>
-      <span class="date">Last Updated: November 24, 2025</span>
+      <span class="date">Last Updated: November 26, 2025</span>
     </header>
 
     <p>Welcome to <strong>The Brief: Daily</strong> ("we", "our", or "us"). This Privacy Policy explains how we handle your information when you use our mobile application designed to provide news, weather updates, and financial data.</p>
@@ -132,9 +132,14 @@
     <p>By using our Service, you agree to the collection and use of information in accordance with this policy.</p>
 
     <h2>1. Information We Collect</h2>
-    <p>We prioritize your privacy. Generally, we do not knowingly collect directly identifiable personal information (such as your name, address, or phone number).</p>
+    <p>We prioritize your privacy. We collect information to provide better services to all our users.</p>
     
     <div class="highlight-box">
+      <strong>Location Data:</strong> <br>
+      We collect and process information about your actual location (using GPS, Wi-Fi, or network signals). This data is used specifically to provide you with local weather forecasts and location-based news updates relevant to your current area.
+    </div>
+
+    <div class="highlight-box" style="margin-top: 20px;">
       <strong>Automatically Collected Data:</strong> <br>
       When you use the app, certain non-personal data may be collected automatically by third-party services to ensure the app functions correctly and to serve advertisements. This may include your device type, operating system version, IP address, and usage statistics.
     </div>
@@ -142,20 +147,20 @@
     <h2>2. Third-Party Services & APIs</h2>
     <p>To provide you with up-to-date content, "The Brief: Daily" utilizes third-party services. These entities may collect information used to identify your device:</p>
     <ul>
-      <li><strong>Google AdMob:</strong> We use AdMob to display advertisements. Google may use cookies or unique device identifiers for personalized advertising.</li>
-      <li><strong>News, Finance & Weather APIs:</strong> The app fetches data from external APIs to display content. While these services receive requests from your device to deliver data (e.g., weather for your general area), we do not share your personal identity with them.</li>
+      <li><strong>Google AdMob:</strong> We use AdMob to display advertisements. Google may use your device's location and other identifiers to serve personalized ads based on your interests and location.</li>
+      <li><strong>News, Finance & Weather APIs:</strong> The app fetches data from external APIs. Your coordinates (latitude and longitude) are sent to our weather data providers to retrieve the forecast for your specific location.</li>
     </ul>
     <p>You can read more about Google's privacy practices here: <a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a>.</p>
 
     <h2>3. Permissions</h2>
-    <p>To provide specific features, the app may request the following permissions:</p>
+    <p>To provide specific features, the app requests the following permissions:</p>
     <ul>
+      <li><strong>Location (Precise or Approximate):</strong> We require access to your location to display accurate local weather conditions. You can choose to allow this permission "While Using the App". If you deny this permission, location-based features (like local weather) may not function.</li>
       <li><strong>Notifications:</strong> To send you alerts about breaking news or daily briefings. You can opt-out anytime via device settings.</li>
-      <li><strong>Location (Optional):</strong> If applicable, the app may request access to your location solely to provide local weather updates. This data is processed momentarily and is not stored on our servers.</li>
     </ul>
 
     <h2>4. Data Security</h2>
-    <p>We value your trust in providing us your information. While no method of transmission over the internet is 100% secure, we strive to use commercially acceptable means to protect your device data and ensure our third-party partners maintain high security standards.</p>
+    <p>We value your trust in providing us your information. While no method of transmission over the internet is 100% secure, we strive to use commercially acceptable means to protect your device data. Location data is processed primarily for fetching real-time content and is not permanently stored on our servers linked to your personal identity.</p>
 
     <h2>5. Children’s Privacy</h2>
     <p>Our Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. If we discover that a child under 13 has provided us with personal information, we will immediately delete this from our servers.</p>
