--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -155,9 +155,9 @@
     <h2>3. Permissions</h2>
     <p>To provide specific features, the app requests the following permissions:</p>
     <ul>
-      <li><strong>Location (Precise or Approximate):</strong> We require access to your location to display accurate local weather conditions. You can choose to allow this permission "While Using the App". If you deny this permission, location-based features (like local weather) may not function.</li>
-      <li><strong>Notifications:</strong> To send you alerts about breaking news or daily briefings. You can opt-out anytime via device settings.</li>
-    </ul>
+  <li><strong>Location (Precise or Approximate):</strong> We require access to your location to display accurate local weather conditions. You can choose to allow this permission "While Using the App". If you deny this permission, location-based features (like local weather) may not function.</li>
+  <li><strong>Notifications:</strong> The app requests your permission to send push notifications for important updates, such as breaking news and daily briefings. You can manage or opt-out of these notifications at any time via your device settings. Notifications are used solely to enhance your app experience and are not linked to your personal identity or shared with third parties for advertising purposes.</li>
+</ul>
 
     <h2>4. Data Security</h2>
     <p>We value your trust in providing us your information. While no method of transmission over the internet is 100% secure, we strive to use commercially acceptable means to protect your device data. Location data is processed primarily for fetching real-time content and is not permanently stored on our servers linked to your personal identity.</p>
